--- a/Locosocial/Base.lproj/Main.storyboard
+++ b/Locosocial/Base.lproj/Main.storyboard
@@ -24,9 +24,9 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="900" y="139"/>
+            <point key="canvasLocation" x="803" y="181"/>
         </scene>
-        <!--Item 2-->
+        <!--Upload-->
         <scene sceneID="wKi-KO-CUM">
             <objects>
                 <viewController id="ZHF-Vh-Vag" customClass="UploadViewController" customModule="Locosocial" customModuleProvider="target" sceneMemberID="viewController">
@@ -36,29 +36,32 @@
                         <viewLayoutGuide key="safeArea" id="sWO-Dj-Mv4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="WZK-Mm-iWR"/>
+                    <tabBarItem key="tabBarItem" title="Upload" image="square.and.arrow.up" catalog="system" id="WZK-Mm-iWR"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iQY-fv-XLH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1614" y="913"/>
+            <point key="canvasLocation" x="1612" y="1028"/>
         </scene>
-        <!--Item-->
+        <!--Settings-->
         <scene sceneID="ZUn-fW-2HD">
             <objects>
-                <viewController id="E5d-UI-IM2" sceneMemberID="viewController">
+                <viewController id="E5d-UI-IM2" customClass="SettingsViewController" customModule="Locosocial" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="F6v-ts-VOb">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="xx7-w8-A01"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="Gng-nO-aXA"/>
+                    <tabBarItem key="tabBarItem" title="Settings" image="gear" catalog="system" id="Gng-nO-aXA"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="toLogInVC" id="qIo-c2-UhX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9ZY-HJ-mUP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2330" y="913"/>
+            <point key="canvasLocation" x="2410" y="1028"/>
         </scene>
-        <!--Item 1-->
+        <!--Feed-->
         <scene sceneID="FUq-Ae-4Gx">
             <objects>
                 <viewController id="fqk-mF-sv5" customClass="FeedViewController" customModule="Locosocial" customModuleProvider="target" sceneMemberID="viewController">
@@ -167,7 +170,7 @@
                             <constraint firstItem="bbj-CK-UZk" firstAttribute="leading" secondItem="D7q-Wt-Jpw" secondAttribute="leading" id="zaN-mT-u4K"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="YKF-FY-VZi"/>
+                    <tabBarItem key="tabBarItem" title="Feed" image="rectangle.grid.1x2" catalog="system" id="YKF-FY-VZi"/>
                     <connections>
                         <outlet property="cardTableView" destination="bbj-CK-UZk" id="YWk-u3-zRq"/>
                         <outlet property="topAvatar" destination="NZP-SR-Wdv" id="0q9-2k-exz"/>
@@ -175,7 +178,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VAa-Ge-Dgx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="900.00000000000011" y="912.72321428571422"/>
+            <point key="canvasLocation" x="803" y="1028"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="xHg-Wc-mIi">
@@ -195,11 +198,14 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gXo-zw-s73" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1613" y="139"/>
+            <point key="canvasLocation" x="1612" y="181"/>
         </scene>
     </scenes>
     <resources>
+        <image name="gear" catalog="system" width="128" height="119"/>
         <image name="logo" width="402" height="78"/>
+        <image name="rectangle.grid.1x2" catalog="system" width="128" height="101"/>
+        <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
         <image name="zeynep" width="460" height="460"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
